@@ -5,7 +5,7 @@ getVersions()
     MODEMVER="iaxmodem-`cat VERSION`"
     DSPVER=`grep "^ VERSION=" lib/spandsp/configure | sed "s/ VERSION='*\([^']*\)'*/\1/g"`
     if [ -n "$DSPVER" ]; then
-	DSPVER="spandsp-$DSPVER"
+	DSPVER="spandsp-$DSPVER+"
     fi
     IAXVER=`grep "^ VERSION=" lib/libiax2/configure | sed "s/ VERSION='*\([^']*\)'*/\1/g"`
     if [ -n "$IAXVER" ]; then
